<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Budget</string>

    <string name="crash_error_activity_error_occurred_explanation">Unhandled exception.</string>
    <string name="crash_error_activity_restart_app">Restart</string>
    <string name="crash_error_activity_error_details">Details</string>
    <string name="crash_error_activity_error_details_title">Exception Details</string>
    <string name="crash_error_activity_error_details_close">Close</string>
    <string name="crash_error_activity_error_details_copy">Copy</string>
    <string name="crash_error_activity_error_details_copied">Copied</string>
    <string name="crash_error_activity_error_details_clipboard_label">Crash info</string>
    <string name="crash_error_activity_out_of_memory">Out of RAM!</string>

    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="night_mode_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>-1</item>
    </string-array>

    <string-array name="night_mode_names">
        <item>Off</item>
        <item>On</item>
        <item>Automatic</item>
        <item>Follow system</item>
    </string-array>

    <string-array name="theme_overlay_names">
        <item>Off</item>
        <item>Amoled</item>
        <item>Material 1</item>
    </string-array>

    <string-array name="theme_overlay_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>

    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="button_back">Back</string>
    <string name="search_hint">Search</string>
    <string name="close">Close</string>
    <string name="search_options">Search Options</string>
    <string name="directory_is_empty">Directory is empty</string>
    <string name="error_timeout_message">Request timed out</string>
    <string name="error_unknown_host">No network connection</string>
    <string name="more_info">More info</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_copy">Copy</string>
    <string name="not_permitted">Permissions not granted! Feature not available</string>
    <string name="click_back_to_exit">Click again to exit</string>
    <string name="success">Success</string>
    <string name="choose_theme_title">Color Palette</string>
    <string name="night_mode_title">Night mode</string>
    <string name="day_mode_title">Day mode</string>
    <string name="theme_overlay" translatable="false">Amoled/Material 1</string>
    <string name="font_size">Font size</string>
    <string name="dev_settings">For Developers</string>
    <string name="developer_mode">Developer mode</string>
    <string name="need_restart">Restart required</string>
    <string name="settings">Settings</string>
    <string name="set_default">Reset</string>
    <string name="slidr_vertical_settings">Vertical settings:</string>
    <string name="slidr_horizontal_settings">Horizontal settings:</string>
    <string name="slidr_sensitive">Sensitivity %1$d</string>
    <string name="slidr_velocity_threshold">Velocity threshold %1$d</string>
    <string name="slidr_distance_threshold">Distance threshold %1$d</string>
    <string name="not_available">NOT AVAILABLE</string>
    <string name="theme_edit_title">Choosing a color theme</string>
    <string name="cancel">Cancel</string>

    <!-- Do not translate. Duration format for duration < 1 hour -->
    <!-- Do not translate. Duration format for duration >= 1 hour -->

    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="formatted_date_tomorrow_clean">tomorrow at %1$s</string>
    <string name="formatted_date_yesterday_clean">yesterday at %1$s</string>
    <string name="files_count_a">%1$d file</string>
    <string name="files_count_b">%1$d files</string>
    <string name="files_count_c">%1$d files</string>
    <string name="tags">Tags</string>
    <string name="export_settings">Export settings</string>
    <string name="import_settings">Import settings</string>
    <string name="import_export_settings">Import/Export</string>
    <string name="viewpager_page_transform">Viewpager2 animation</string>
    <string name="developer">Developer: Artem Umerov, 21IS3-z</string>
    <string name="select_file">Selection %1$s</string>
    <string name="select_folder">Select directory</string>
    <string name="biometric">Put your finger on the fingerprint reader</string>
    <string name="biometric_not_support">Fingerprint login not supported!</string>
    <string name="create_pin_code_title">Create a PIN</string>
    <string name="entered_pin_codes_do_not_match">Entered PIN codes do not match</string>
    <string name="pin_digit">Pin code</string>
    <string name="use_pin_title">Use PIN or fingerprint</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_0" translatable="false">0</string>
    <string name="repeat_pin_code_title">Repeat PIN</string>
    <string name="not_yet_implemented_message">Not implemented yet!</string>
    <string name="error_login_by_fingerprint_not_allowed">Fingerprint login not allowed</string>
    <string name="limit_exceeded_number_of_attempts_message">Input attempt limit exceeded</string>
    <string name="pin_is_invalid_message">Invalid PIN</string>
    <string name="security">Security</string>
    <string name="allow_fingerprint_title">Allow fingerprint</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="ask_for_pin_on_application_start_title">PIN at startup</string>
    <string name="ask_for_pin_on_application_start_summary">Request PIN on application start</string>
    <string name="general_settings">General</string>
    <string name="reset_settings">Reset settings</string>
    <string name="wrong_settings_format">This settings format is not supported!</string>
    <string name="language_ui">Language</string>
    <string name="scan_qr">Scan QR</string>

    <string name="paste_money">Paste</string>
    <string name="take_money">Take</string>
    <string name="balance">Balance</string>

    <string name="error_db_get_register">Error getting Register!</string>
    <string name="error_db_get_coin_operation_id">Coin operation not found!</string>
    <string name="error_db_add_operation_support_only_new">Add operation support only new!</string>
    <string name="error_db_low_balance">Low Balance!</string>

    <string name="info_balance">Balance:</string>
    <string name="info_taked">Taked:</string>
    <string name="info_pasted">Pasted:</string>
    <string name="info_operations_count">Count:</string>

    <string name="rub" translatable="false">%1$s ₽</string>

    <string name="operation_day_today">Today</string>
    <string name="operation_day_yesterday">Yesterday</string>
    <string name="operation_day_ten_days">For 10 days</string>
    <string name="operation_day_older">Old</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="tittle">Tittle</string>
    <string name="comment">Comment</string>
    <string name="coin">Coin</string>
    <string name="date">Date</string>

    <string name="coin_must_over_zero">Coin must over zero!</string>

    <string name="slidr_settings">Slidr Settings</string>
</resources>
